--- a/docker-dir/webservers/tomEE/Dockerfile
+++ b/docker-dir/webservers/tomEE/Dockerfile
@@ -10,20 +10,24 @@ FROM tomee
 #FROM tomee:6-jre-1.7.4-plume
 #FROM tomee:6-jre-1.7.4-plus
 #FROM tomee:6-jre-1.7.4-webprofile
+
 #FROM tomee:7-jre-1.7.4-jaxrs
 #FROM tomee:7-jre-1.7.4-plume
 #FROM tomee:7-jre-1.7.4-plus
 #FROM tomee:7-jre-1.7.4-webprofile
+
 #FROM tomee:8-jre-1.7.4-jaxrs
 #FROM tomee:8-jre-1.7.4-plume
 #FROM tomee:8-jre-1.7.4-plus
 #FROM tomee:8-jre-1.7.4-webprofile
-#FROM tomee:7-jre-7.0.0-M3-plume
-#FROM tomee:7-jre-7.0.0-M3-plus
-#FROM tomee:7-jre-7.0.0-M3-webprofile
-#FROM tomee:8-jre-7.0.0-M3-plume
-#FROM tomee:8-jre-7.0.0-M3-plus
-#FROM tomee:8-jre-7.0.0-M3-webprofile
+
+#FROM tomee:7-jdk-7.0.0-plume
+#FROM tomee:7-jdk-7.0.0-plus
+#FROM tomee:7-jdk-7.0.0-webprofile
+
+#FROM tomee:8-jdk-7.0.0-plume
+#FROM tomee:8-jdk-7.0.0-plus
+#FROM tomee:8-jdk-7.0.0-webprofile
 
 ENV TOMEE_HOME /usr/local/tomee/
 ADD HelloDocker.war $TOMEE_HOME/webapps/
