changes made, Derby db added

--- a/docker-dir/webservers/geronimo/Dockerfile
+++ b/docker-dir/webservers/geronimo/Dockerfile
@@ -5,5 +5,6 @@
 # GERONIMO_HOME	= /apps/geronimo-tomcat6-javaee5-2.2.1/
 #======================================================================
 FROM jaydm/geronimo:2.2.1
-ADD HelloDocker.war $GERONIMO_HOME/deploy/
+#RUN sudo chmod +rwx $GERONIMO_HOME/deploy
+#ADD helloworld.war $GERONIMO_HOME/deploy/
 
